[gd_scene load_steps=6 format=3 uid="uid://d1jxpw8vdu2fs"]

[ext_resource type="Script" path="res://scripts/menu_opcoes.gd" id="1_dp5ff"]
[ext_resource type="Theme" uid="uid://dopnw7sydav2e" path="res://assets/arte/tema_botoes.tres" id="2_8v721"]
[ext_resource type="Texture2D" uid="uid://dpawtabdhbhhv" path="res://assets/arte/fundo_menu.png" id="2_gw15w"]
[ext_resource type="Script" path="res://scripts/volume_button.gd" id="2_pdya7"]
[ext_resource type="AudioStream" uid="uid://q68upoyi5s6i" path="res://assets/sfx/Menu/selecionar opcao.wav" id="5_v1gtx"]

[node name="menu_opcoes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dp5ff")

[node name="TextureRect" type="TextureRect" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_gw15w")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="volume_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../voltar")
focus_neighbor_bottom = NodePath("../graphs_button")
theme = ExtResource("2_8v721")
text = "Volume"
script = ExtResource("2_pdya7")

[node name="graphs_button" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../volume_button")
focus_neighbor_bottom = NodePath("../control_remap")
theme = ExtResource("2_8v721")
text = "Gr√°ficos"

[node name="control_remap" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../graphs_button")
focus_neighbor_bottom = NodePath("../voltar")
theme = ExtResource("2_8v721")
text = "Controles"

[node name="voltar" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../control_remap")
focus_neighbor_bottom = NodePath(".")
theme = ExtResource("2_8v721")
text = "Voltar"

[node name="escolha" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_v1gtx")

[connection signal="pressed" from="MarginContainer/VBoxContainer/volume_button" to="." method="_on_volume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/graphs_button" to="." method="_on_graphs_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/control_remap" to="." method="_on_control_remap_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/voltar" to="." method="_on_voltar_pressed"]
[connection signal="finished" from="escolha" to="." method="_on_escolha_finished"]
